apps/development/mcpjungle/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mcpjungle
  namespace: mcpjungle
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mcpjungle.internal.crussell.io`)
      kind: Rule
      services:
        - name: mcpjungle
          port: 8080
  tls:
    certResolver: letsencrypt
